--- a/src/Cards.API/Cards.API.csproj
+++ b/src/Cards.API/Cards.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Cards.Core.WebApi\Cards.Core.WebApi.csproj" />
     <ProjectReference Include="..\Cards.Core\Cards.Core.csproj" />
     <ProjectReference Include="..\Cards.Domain\Cards.Domain.csproj" />
     <ProjectReference Include="..\Cards.Infrastructure\Cards.Infrastructure.csproj" />
